# vpnWatcher

./: .gitignore  .gitmodules  CMakeLists.txt  prepare.sh
client/: CMakeLists.txt
client/src/: main.cpp
common/: CMakeLists.txt
common/include/: client.h  common.h
common/src/: client.cpp  common.cpp
server/: CMakeCache.txt  CMakeLists.txt
server/include/: manager.h  vpnservice.h
server/src/: main.cpp  manager.cpp  vpnservice.cpp  vpnservice.h
shared/include/: msgpack  msgpack.h  msgpack.hpp  pistache
shared/include/cryptopp/: 3way.h  adler32.h  aes.h  algebra.h  algparam.h  arc4.h  argnames.h  aria.h  asn.h  authenc.h  base32.h  base64.h  basecode.h  bench.h  blake2.h  blowfish.h  blumshub.h  camellia.h  cast.h  cbcmac.h  ccm.h  chacha.h  channels.h  cmac.h  config.h  cpu.h  crc.h  cryptlib.h  default.h  des.h  dh.h  dh2.h  dll.h  dmac.h  drbg.h  dsa.h  eax.h  ec2n.h  eccrypto.h  ecp.h  (+112 more)
